--- a/css/contact-thanks.css
+++ b/css/contact-thanks.css
@@ -1,7 +1,7 @@
 .version.contact_thanks /* version checker */
 {
-	color: #000004;
-	background-color: #86C72A;
+	color: #0000EC;
+	background-color: #2CEC88;
 }
 
 #muse_css_mq
@@ -459,8 +459,8 @@
 	width: 782px;
 	min-height: 56px;
 	background-color: transparent;
-	line-height: 19px;
 	color: #9E9E9E;
+	line-height: 19px;
 	text-align: center;
 	font-size: 16px;
 	font-family: bitter, serif;
