--- a/css/iefonts_resume.css
+++ b/css/iefonts_resume.css
@@ -5,7 +5,7 @@
 
 .subhead-serif
 {
-	font-family: gentium-book-basic-i7, sans-serif;
+	font-family: gentium-book-basic-i7, serif;
 }
 
 .White-Link,.Pink-Link,.Character-Style
